# assay

./: .dockerignore  .gitignore  DECISIONS.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
data/golden/: inv_001.truth.json  inv_002.truth.json  inv_003.truth.json  inv_004.truth.json  inv_005.truth.json  inv_006.truth.json  inv_007.truth.json  inv_008.truth.json  inv_009.truth.json  inv_010.truth.json  inv_011.truth.json  inv_012.truth.json  inv_013.truth.json  inv_014.truth.json  inv_015.truth.json  inv_016.truth.json  inv_017.truth.json  inv_018.truth.json  inv_019.truth.json  inv_020.truth.json  inv_021.truth.json  inv_022.truth.json  inv_023.truth.json  inv_024.truth.json  inv_025.truth.json  inv_026.truth.json  inv_027.truth.json  inv_028.truth.json  inv_029.truth.json  inv_030.truth.json  inv_031.truth.json  inv_032.truth.json
results/: accepted.jsonl  eval_report.json  eval_report.md  review_queue.jsonl
results/sroie/: accepted.jsonl  eval_report.json  eval_report.md  review_queue.jsonl
scripts/: fetch_sroie.py
src/assay/: cli.py  confidence.py  cost.py  dataset.py  evalrun.py  export.py  extract.py  generate.py  ingest.py  lf.py  llm.py  metrics.py  normalize.py  review.py  schema.py  sroie.py  validate.py
tests/: conftest.py  test_confidence.py  test_evalrun.py  test_extract.py  test_generate.py  test_langfuse.py  test_metrics.py  test_recorded_response.py  test_review.py  test_sroie.py  test_validate.py
tests/fixtures/: inv_001.recorded.json
